# discord-notify-bot

./: .gitignore  Cargo.toml  Makefile  README.md
api-gateway/: .env.example  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
api-gateway/config/: cron.go  db.go  fiber.go
api-gateway/handler/: announcement.go  assignment.go  course.go  material.go
api-gateway/handler/scraper/: course.go
api-gateway/models/: announcement.go  assignment.go  course.go  materials.go  response.go
api-gateway/services/cron/: announcement.go  assignment.go  course.go  (+1 more)
api-gateway/types/: announcement.go  assignment.go  common.go  course.go  materials.go  response.go
api-gateway/utils/: http.go  query.go
discord-bot/: .dockerignore  .env.example  .eslintrc  Cargo.toml  Dockerfile  docker-compose.yml  package.json  tsconfig.json
discord-bot/src/: axios.ts  env.ts  handler.rs  index.ts  routes.ts  slash_command.ts
discord-bot/src/commands/: announcement.ts  assignment.ts  material.ts  mcv_scraper.rs  mod.rs  overview.ts  restart.ts  subscribe.ts  unsubscribe.ts
discord-bot/src/config/: axios.ts  clientBot.ts  env.ts  mongo.ts  routes.ts
discord-bot/src/dtos/: announcement.ts  assignment.ts
discord-bot/src/models/: channel.ts
discord-bot/src/types/: announcement.ts  assignment.ts  command.ts  common.ts  course.ts  material.ts
discord-bot/src/utils/: course.ts  courseChoices.ts  helper.rs  misc.ts  mod.rs  slashCommand.ts  subscribe.ts
src/: handler.rs  main.rs
src/commands/: math.rs  mcv_scraper.rs  misc.rs
src/utils/: env.rs  helper.rs  http.rs  mod.rs
(+4 files in other folders)
